src/pages/GamePage/components/Fireworks.css
.punt {
  position: absolute;
  left: 50px;
  top: 50px;
  height: 10px;
  width: 10px;
  border-radius: 50%;
  opacity: 0;
  animation-duration: 3s;
  animation-iteration-count: 3;
}

.blauw {
  position: absolute;
  left: 450px;
  top: 250px;
  height: 400px;
  width: 200px;
}

.blauw div {
  background-color: rgb(96, 96, 255);
  animation-delay: 0.2s;
}

.paars {
  position: absolute;
  left: 200px;
  top: 10px;
  height: 400px;
  width: 200px;
}

.paars div {
  background-color: #70f;
  animation-delay: 2.5s;
}

.rood {
  position: absolute;
  left: 800px;
  top: 50px;
  height: 400px;
  width: 200px;
}

.rood div {
  background-color: #f00;
  animation-delay: 4s;
}

.oranje {
  position: absolute;
  left: 1000px;
  top: 400px;
  height: 400px;
  width: 200px;
}

.oranje div {
  background-color: #f50;
  animation-delay: 4.5s;
}

.geel {
  position: absolute;
  left: 1250px;
  top: 100px;
  height: 400px;
  width: 200px;
}

.geel div {
  background-color: #fb0;
  animation-delay: 6s;
}

.groen {
  position: absolute;
  left: 1500px;
  top: 450px;
  height: 400px;
  width: 200px;
}

.groen div {
  background-color: #0f0;
  opacity: 0;
  animation-delay: 7.5s;
}

.blauw2 {
  position: absolute;
  left: 550px;
  top: 350px;
  height: 400px;
  width: 200px;
}

.blauw2 div {
  background-color: rgb(92, 92, 255);
  animation-delay: 8.5s;
}

.paars2 {
  position: absolute;
  left: 300px;
  top: 110px;
  height: 400px;
  width: 200px;
}

.paars2 div {
  background-color: #a352ff;
  animation-delay: 9.5s;
}

.rood2 {
  position: absolute;
  left: 900px;
  top: 150px;
  height: 400px;
  width: 200px;
}

.rood2 div {
  background-color: #ff2f2f;
  animation-delay: 12.5s;
}

.oranje2 {
  position: absolute;
  left: 1100px;
  top: 500px;
  height: 400px;
  width: 200px;
}

.oranje2 div {
  background-color: #ff5500;
  animation-delay: 15s;
}

.geel2 {
  position: absolute;
  left: 1350px;
  top: 200px;
  height: 400px;
  width: 200px;
}

.geel2 div {
  background-color: #ffbb00;
  animation-delay: 17.5s;
}

.groen2 {
  position: absolute;
  left: 1600px;
  top: 550px;
  height: 400px;
  width: 200px;
}

.groen2 div {
  background-color: #00ff00;
  animation-delay: 20s;
}

.punt:nth-child(1) {
  animation-name: explode1;
}

.punt:nth-child(2) {
  animation-name: explode2;
}

.punt:nth-child(3) {
  animation-name: explode3;
}

.punt:nth-child(4) {
  animation-name: explode4;
}

.punt:nth-child(5) {
  animation-name: explode5;
}

.punt:nth-child(6) {
  animation-name: explode6;
}

.punt:nth-child(7) {
  animation-name: explode7;
}

.punt:nth-child(8) {
  animation-name: explode8;
}

.punt:nth-child(9) {
  animation-name: explode9;
}

.punt:nth-child(10) {
  animation-name: explode10;
}

.punt:nth-child(11) {
  animation-name: explode11;
}

.punt:nth-child(12) {
  animation-name: explode12;
}

.punt:nth-child(13) {
  animation-name: explode13;
}

.punt:nth-child(14) {
  animation-name: explode14;
}

.punt:nth-child(15) {
  animation-name: explode15;
}

.punt:nth-child(16) {
  animation-name: explode16;
}

.punt:nth-child(17) {
  animation-name: explode17;
}

.punt:nth-child(18) {
  animation-name: explode18;
}

.punt:nth-child(19) {
  animation-name: explode19;
}

.punt:nth-child(20) {
  animation-name: explode20;
}

.punt:nth-child(21) {
  animation-name: explode21;
}

.punt:nth-child(22) {
  animation-name: explode22;
}

.punt:nth-child(23) {
  animation-name: explode23;
}

.punt:nth-child(24) {
  animation-name: explode24;
}

@keyframes explode1 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(0px, -100px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(0px, 0px);
  }
}

@keyframes explode2 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(100px, 0px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(100px, 100px);
  }
}

@keyframes explode3 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(0px, 100px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(0px, 200px);
  }
}

@keyframes explode4 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-100px, 0px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-100px, 100px);
  }
}

@keyframes explode5 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-70px, -70px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-70px, 30px);
  }
}

@keyframes explode6 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(70px, -70px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(70px, 30px);
  }
}

@keyframes explode7 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(70px, 70px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(70px, 170px);
  }
}

@keyframes explode8 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-70px, 70px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-70px, 170px);
  }
}

@keyframes explode9 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-200px, 0px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-200px, 100px);
  }
}

@keyframes explode10 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(0px, -200px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(0px, -100px);
  }
}

@keyframes explode11 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(200px, 0px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(200px, 100px);
  }
}

@keyframes explode12 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(0px, 200px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(0px, 300px);
  }
}

@keyframes explode13 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-180px, -70px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-180px, 30px);
  }
}

@keyframes explode14 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-70px, -180px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-70px, -80px);
  }
}

@keyframes explode15 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(70px, -180px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(70px, -80px);
  }
}

@keyframes explode16 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(180px, -70px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(180px, 30px);
  }
}

@keyframes explode17 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(180px, 70px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(180px, 170px);
  }
}

@keyframes explode18 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(70px, 180px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(70px, 280px);
  }
}

@keyframes explode19 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-70px, 180px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-70px, 280px);
  }
}

@keyframes explode20 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-180px, 70px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-180px, 170px);
  }
}

@keyframes explode21 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-140px, -140px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-140px, -40px);
  }
}

@keyframes explode22 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(140px, -140px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(140px, -40px);
  }
}

@keyframes explode23 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(140px, 140px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(140px, 240px);
  }
}

@keyframes explode24 {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
    transform: translate(-140px, 140px);
  }
  50% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    transform: translate(-140px, 240px);
  }
}

